--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@cobalt-ui/cli": "^1.6.2",
     "@cobalt-ui/plugin-css": "^1.7.0",
-    "@cobalt-ui/plugin-js": "^1.4.3"
+    "@cobalt-ui/plugin-js": "^1.4.3",
+    "@cobalt-ui/plugin-tailwind": "^0.0.2"
   }
 }
